[package]
name = "precio"
version = "1.0.0"
edition = "2021"
authors = [ "Kim Laine <kim.laine@microsoft.com>", ]
readme = "README.md"
license = "MIT"
repository = "https://GitHub.com/Microsoft/Precio"
homepage = "https://GitHub.com/Microsoft/Precio"
description = "A Rust implementation of the Private Recursive Histogram protocol (Precio)"
exclude = [
    "**/.gitignore",
    ".gitignore",
]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_arrays = "0.1.0"
rand_distr = "0.4.3"
serde_json = "1.0.95"
serde_repr = "0.1.12"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.7"
sha3 = "0.10.8"
num-traits = "0.2.16"
num-modular = "0.5.1"
itertools = "0.11.0"
cfg-if = "1.0.0"

[dev-dependencies]
bincode = "1.3.3"
zipf = "7.0.0"

[features]
default = []
wide_summation_modulus = []
